Changelog for ETL-Yertl

{{ $NEXT }}

    [Fixed]

    - Fixed nulls appearing in Graphite time series.

0.032     2017-08-25 21:42:30-05:00 America/Chicago

    [Fixed]

    - Fixed a problem where `ysql` would refuse to work as the first
      part of a cron job, thus making it useless for gathering metrics
      to be written to `yts`. Now we also check to see if `STDIN` is
      attached to something with some size...

0.031     2017-08-25 18:04:03-05:00 America/Chicago

    [Added]

    - ysql now has a `--count` helper to count the number of entries in
      a table (`SELECT COUNT(*) FROM <table>`). This also works with the
      `--where` helper to limit the rows counted. This is going to be
      especially useful with the new `yts` time series command.

    - The `yts` command to work with time series databases like
      InfluxDB, Graphite (Carbon), RRDTool, Prometheus, and the like.
      Only InfluxDB is available so far. If you want to contribute an
      adapter for the others, let me know!

0.030     2017-08-24 13:25:23-05:00 America/Chicago

    [Fixed]

    - Removed out-of-date Build.PL that was no longer being generated.
      This caused some CPAN clients to fail to install the right
      prerequisites. Thanks @andk and CPAN Testers!

0.029     2017-08-16 23:11:30-05:00 America/Chicago

    [Fixed]

    - We now give better error messages when accidentally trying to
      insert hashrefs or arrayrefs into a column using the `ysql`
      `--insert` helper. SQL::Abstract does not allow this and instead
      gives an untrappable warning (instead of throwing an exception,
      which is potentially earmarked for SQL::Abstract v2)

    [Added]

    - yq's filter language now allows `$.` to refer to the initial
      document even if the current document (`.`) is something else.
      This way one can traverse the document using `|` filters and still
      get to the original.

    - yq's filter language now allows assigning values to filters, so