@@ -39,7 +39,8 @@ __END__
 =head1 SYNOPSIS
 
     # Read a time series
-    yts [-s] <db_spec> <metric> [--tag <name>=<value>]
+    yts [-s] <db_spec> <metric> [--start <datetime>] [--end <datetime>] \
+        [--tag <name>=<value>]
 
     # Write a time series
     yts [-s] <db_spec> [<metric>] [--tag <name>=<value>]
@@ -156,6 +157,18 @@ The metric to read/write. Databases may specify metrics in different ways.
 See the adapter documentation for more information.
 
 =head1 OPTIONS
+
+=head2 --start <datetime>
+
+When reading, only get points starting at or after the given date/time.
+Date/time are accepted in any ISO8601 format (C<YYYY-MM-DD>,
+C<YYYY-MM-DDTHH:MM:SS>).
+
+=head2 --end <datetime>
+
+When reading, only get points ending at or before the given date/time.
+Date/time are accepted in any ISO8601 format (C<YYYY-MM-DD>,
+C<YYYY-MM-DDTHH:MM:SS>).
 
 =head2 --tag <name>=<value>
 
